# gpu-font-renderer

./: .gitignore  CMakeLists.txt  README.md
resources/: Debug.fragment.glsl  Debug.vertex.glsl  Glyph.fragment.glsl  Glyph.vertex.glsl
src/: FontProcessor.h  OpenGL.cpp  main.cpp
src/OpenType/: Defines.h  OpenType.h  TableDirectory.h  TableRecord.h  Tables.h  TypeArray.h
src/OpenType/Tables/: Table.h  cmap.h  glyf.h  head.h  hhea.h  hmtx.h  loca.h  maxp.h
src/Renderer/: Buffer.h  Camera.h  Framebuffer.h  MatrixStack.h  Program.h  Texture.h  Window.h
src/Renderer/OpenGL/: Buffer.h  Framebuffer.h  Program.h  Texture.h  Utils.h
src/Renderer/Vulkan/: Application.h  Buffer.h  CommandPool.h  GraphicsPipeline.h  QueueFamilyIndices.h  SwapChain.h  Synchronization.h  Utils.h
