CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

PROJECT(gfr)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

SET(CMAKE_CXX_FLAGS_RELEASE "-Os -flto")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fsanitize=address,leak,undefined")

FILE(GLOB_RECURSE SOURCES
	"src/*.cpp"
	"src/**/*.cpp"
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES CXX_STANDARD 23)
TARGET_COMPILE_OPTIONS(${CMAKE_PROJECT_NAME} PUBLIC
	-Wall
	-Wextra
)
INCLUDE_DIRECTORIES(src)
